--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ We can define the <code>Stream</code> of $x_n$ as a potentially unbounded sequen
 </span><span class="line"><span class="n">ynPi</span><span class="k">:</span> <span class="kt">scala.collection.immutable.Stream</span><span class="o">[</span><span class="kt">Double</span><span class="o">]</span>
 </span></code></pre></td></tr></table></div></figure></notextile></div>
 
-<p>In the context of <code>Stream</code>s we can see the map application as a transformation from the succession of $x_n$ to the succession of $f_n := f(x_n)$. 
+<p>In the context of <code>Stream</code>s we can see the map application as a transformation from the sequence of $x_n$ to the sequence of $f_n := f(x_n)$. 
 This interpretation of the <code>map</code> function applies only to sequence-like types such as Streams and Lists, but it has a very different interpretation in other types, where concepts coming from Category Theory come into place, and lead to the ideas of Monoids and Monads.</p>
 
 <p>Now the only thing left to do is add up the <code>ynPi</code> and multiply them by $\Delta x$, and this can easily be achieved through a <code>foldLeft</code> application:</p>
